--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -29,3 +29,4 @@
 @import './components/content';
 @import './components/carousel';
 @import './components/testimonial';
+@import './components/padding_top';
