build code print for design gui

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -30,3 +30,4 @@
 @import './components/carousel';
 @import './components/testimonial';
 @import './components/padding_top';
+@import './components/code';
