--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1613,4 +1613,9 @@ img.img-fourth {
   padding-top: 65px;
 }
 
+.code {
+  width: 20%;
+  font-size: 10px;
+}
+
 /*# sourceMappingURL=main.css.map */
