--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1614,8 +1614,10 @@ img.img-fourth {
 }
 
 .code {
-  width: 20%;
-  font-size: 10px;
+  border-radius: 15px;
+  background: #bab8b8;
+  overflow-y: scroll;
+  height: calc(30vh - 30px);
 }
 
 /*# sourceMappingURL=main.css.map */
