--- a/assets/sass/components/_design_gui.scss
+++ b/assets/sass/components/_design_gui.scss
@@ -10,11 +10,12 @@
     }
     
     a {
-        color: black;
+        color: white;
         text-align: center;
         display: block;
     }
     
     h1 {
         text-align: center;
+        color: white;
     }
