--- a/assets/sass/components/_design_gui.scss
+++ b/assets/sass/components/_design_gui.scss
@@ -9,13 +9,13 @@
         border-right: 2px solid #673a2f;
     }
     
-    a {
+    .design_gui a {
         color: white;
         text-align: center;
         display: block;
     }
     
-    h1 {
+    .design_gui h1 {
         text-align: center;
         color: white;
     }
