build print code

--- a/assets/sass/components/_code.scss
+++ b/assets/sass/components/_code.scss
@@ -2,7 +2,7 @@
     //rajouter un border radius
     border-radius: 15px;
     //rajouater un background
-    background: #bab8b8;
+    background: white;
     overflow-y: scroll;
     height: calc(30vh - 30px);
 }
