--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1616,7 +1616,7 @@ img.img-fourth {
 
 .code {
   border-radius: 15px;
-  background: #bab8b8;
+  background: white;
   overflow-y: scroll;
   height: calc(30vh - 30px);
 }
