--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -10,6 +10,7 @@
         
         .content section h1 {
             color: white;
+            text-align: center;
         }
         
         .content section p {
