--- a/assets/sass/components/side_bar.scss
+++ b/assets/sass/components/side_bar.scss
@@ -1,6 +1,6 @@
 .sideBar-product {
     background: url(../images/products/BigLogo.png) no-repeat bottom;
-    background-color: #DB0007;
+    background-color: #63885C;
     //translate the bg image y
     // background-position: 0px 206px;
     width: 350px;
