changing _side_bar.scss + products.html name

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,8 +21,8 @@
 @import './components/text_box';
 @import './components/section1';
 @import'./components/image_map';
-@import'./components/products';
+@import'./components/product';
 @import './components/section2';
-@import './components/side_bar';
+@import './components/_side_bar';
 @import'./components/image_map';
 @import './components/order_map';
