--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -2,8 +2,9 @@
             margin: auto;
             text-align: center;
             border-radius: 15px;
-            height: 200px;
-            width: 200px;
+            height: 319px;
+            width: 275px;
+            margin-right: 70px;
             background: #e0e0e0;
             position: relative;
             cursor: pointer;
