--- a/assets/sass/components/_side_bar.scss
+++ b/assets/sass/components/_side_bar.scss
@@ -6,10 +6,11 @@
     width: 350px;
     height: 879px;
     z-index: -1;
-    margin-left: 48px;
-    margin-top: 102px;
+    margin-left: 43.17px;
+    margin-top: 31px;
     border-radius: 20px;
     display: flex;
+    position: fixed;
     justify-content: center;
     align-items: center;
     text-align: center;
