--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -1,8 +1,9 @@
         .content {
-            margin-left: 220px;
+            margin-left: 450px;
+            margin-top: 86px;
             /* la même largeur que la barre latérale */
             //padding: 20px;
-            overflow-y: scroll;
+         //   overflow-y: scroll;
             /* permet de faire défiler le contenu si nécessaire */
             height: calc(100vh - 80px);
             /* calcul la hauteur restante de la page pour que le contenu prenne tout l'espace disponible */
