--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -34,3 +34,4 @@
 @import './components/testimonial';
 @import './components/padding_top';
 @import './components/code';
+@import './components/page_decoration';
