--- a/assets/sass/components/product.scss
+++ b/assets/sass/components/product.scss
@@ -5,6 +5,7 @@
     //bg image center width 100 url ../images/bg-white.png
     background:url(../images/bg-white.png) no-repeat center center fixed ;
     background-size: cover;
+    font-family: Poppins;
     
 }
 
