--- a/assets/sass/components/_card.scss
+++ b/assets/sass/components/_card.scss
@@ -1,5 +1,4 @@
         .card {
-            margin: auto;
             text-align: center;
             border-radius: 15px;
             height: 319px;
@@ -8,7 +7,8 @@
             background: #e0e0e0;
             position: relative;
             cursor: pointer;
-            margin-bottom: 10px;
+            margin-bottom: 44px;
+            margin-top: 55px;
         }
         
         .row {
