--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -701,6 +701,63 @@ nav {
     }
   }
 }
+.carousel {
+  position: relative;
+  overflow-x: hidden;
+  width: 500px;
+  height: 300px;
+  margin: 50px auto;
+}
+
+.carousel-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.carousel-item {
+  flex: 0 0 500px;
+  height: 100%;
+  margin-right: 20px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3em;
+  color: #555;
+}
+
+.carousel-controls {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.carousel-control {
+  width: 50px;
+  height: 50px;
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 2em;
+  color: #555;
+  cursor: pointer;
+}
+
+.carousel-control:hover {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
 button {
   display: inline-block;
   text-decoration: none;
@@ -1075,12 +1132,18 @@ a {
 }
 .body-bg-products {
   background: url(../images/bg-white.png) no-repeat center center fixed;
+  height: 100vh;
+  width: 100vW;
+  overflow-y: auto;
   background-size: cover;
   font-family: Poppins;
 }
 
 .product-page {
   display: flex;
+  overflow-y: auto;
+  height: 100vh;
+  width: 100vw;
 }
 
 .sideBar-product {
@@ -1088,7 +1151,7 @@ a {
   background-color: #63885C;
   width: 350px;
   height: 879px;
-  z-index: -1;
+  z-index: 0;
   margin-left: 43.17px;
   margin-top: 31px;
   border-radius: 20px;
@@ -1523,7 +1586,7 @@ img.img-layers {
   background-color: #63885C;
   width: 350px;
   height: 879px;
-  z-index: -1;
+  z-index: 0;
   margin-left: 43.17px;
   margin-top: 31px;
   border-radius: 20px;
@@ -1643,6 +1706,7 @@ img.img-layers {
 }
 
 .content {
+  display: block;
   margin-left: 450px;
   margin-top: 26px;
   /* la même largeur que la barre latérale */
