--- a/assets/sass/components/_content.scss
+++ b/assets/sass/components/_content.scss
@@ -1,4 +1,5 @@
         .content {
+            display: block;
             margin-left: 450px;
             margin-top: 26px;
             /* la même largeur que la barre latérale */
