--- a/assets/sass/components/_slider.scss
+++ b/assets/sass/components/_slider.scss
@@ -55,3 +55,63 @@
         }
     }
 }
+
+
+//-----------------------------------------------------------------------
+
+.carousel {
+    position: relative;
+    overflow-x: hidden;
+    width: 500px;
+    height: 300px;
+    margin: 50px auto;
+}
+
+.carousel-inner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+}
+
+.carousel-item {
+    flex: 0 0 500px;
+    height: 100%;
+    margin-right: 20px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 3em;
+    color: #555;
+}
+
+.carousel-controls {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    z-index: 1;
+}
+
+.carousel-control {
+    width: 50px;
+    height: 50px;
+    background-color: rgba(255,255,255,0.5);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2em;
+    color: #555;
+    cursor: pointer;
+}
+
+.carousel-control:hover {
+    background-color: rgba(255,255,255,0.8);
+}
