--- a/assets/sass/components/product.scss
+++ b/assets/sass/components/product.scss
@@ -4,6 +4,9 @@
     //background: linear-gradient(90deg, rgba(41, 133, 138, 0.7) 0%, rgba(123,93,53,1) 35%, rgb(136, 59, 108) 100%); 
     //bg image center width 100 url ../images/bg-white.png
     background:url(../images/bg-white.png) no-repeat center center fixed ;
+    height: 100vh;
+    width: 100vW;
+    overflow-y: auto;
     background-size: cover;
     font-family: Poppins;
     
@@ -12,4 +15,11 @@
 
 .product-page{
     display: flex;
+   // overflow: hidden;
+   overflow-y: auto ;
+   //height = 100% of screnn size 
+    height: 100vh;
+    //width = 100% of screnn size 
+    width: 100vw;
+    //back
 }
