add page contact

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -31,3 +31,4 @@
 @import './components/testimonial';
 @import './components/padding_top';
 @import './components/code';
+@import './components/contact';
