--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1621,4 +1621,32 @@ img.img-fourth {
   height: calc(30vh - 30px);
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.contact h1 {
+  color: white;
+  text-align: center;
+}
+
+.contact p {
+  color: white;
+  width: 50%;
+  margin-left: 25%;
+}
+
+@media (max-width: 700px) {
+  .contact section h1 {
+    margin-left: -20%;
+  }
+  .contact section p {
+    width: 90%;
+    margin-left: -2%;
+  }
+}
+
 /*# sourceMappingURL=main.css.map */
