add page contact

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1639,6 +1639,11 @@ img.img-fourth {
   margin-left: 25%;
 }
 
+.contact .form-group textarea {
+  width: 320px;
+  border-radius: 10px;
+}
+
 @media (max-width: 700px) {
   .contact section h1 {
     margin-left: -20%;
